# 3sx

./: CMakeLists.txt  build-deps.sh
include/port/: renderer_plugin.h
include/port/sdl/: sdl_game_renderer.h
include/rendering/: game_renderer.h  primitives.h
plugins/: README.md
plugins/renderer_hd/: CMakeLists.txt  renderer_hd.c
src/: args.c  configuration.h  main.c
src/core/: renderer.c
src/platform/app/psp/: psp_app.c
src/platform/video/psp/: psp_renderer.c
src/platform/video/sdl/: sdl_game_renderer.c
src/port/: render_backend.h  renderer_plugin.c
src/port/sdl/: sdl_app.c  sdl_game_renderer.c  sdl_render_backend.c
src/rendering/: renderer.c
src/sf33rd/AcrSDK/ps2/: flps2render.c  flps2vram.c
src/sf33rd/Source/Common/: PPGFile.c
src/sf33rd/Source/Game/rendering/: dc_ghost.c  mtrans.c
src/sf33rd/Source/Game/stage/: bg.c
src/sf33rd/Source/Game/ui/: sc_sub.c
